# F4-FPInertiaF4SE

./: .gitignore  CMakeLists.txt  FPGunplayOverhaul.ini  FPInertia.ini  README.md  vcpkg.json
docs/: sneakvig1.psc  sneakvig2.psc
src/: ChamberExclusion.cpp  ChamberExclusion.h  FireOnEmpty.cpp  FireOnEmpty.h  Inertia.cpp  Inertia.h  InertiaPresets.cpp  InertiaPresets.h  Menu.cpp  Menu.h  PCH.h  Settings.cpp  Settings.h  WeaponFOV.cpp  WeaponFOV.h  main.cpp
